<resources>
    <string name="app_name" translatable="false">WorkTime</string>
    <string name="title_home">Overview</string>
    <string name="title_dashboard">Worktime</string>
    <string name="title_notifications">Setup</string>
    <string name="title_activity_dashbrd">Worktimes</string>
    <string name="title_activity_setup">Setup</string>
    <string name="btn_setup_company">Companies</string>
    <string name="btn_setup_wages">Wages</string>
    <string name="title_activity_stp_comp">Stp_comp</string>
    <string name="title_activity_stp_wages">Stp_wages</string>
    <string name="title_activity_developer_section" translatable="false">DeveloperSection</string>
    <string name="title_activity_companies_man_mod">CompaniesManMod</string>
    <string name="Name">Name</string>
    <string name="CompanyAddress">Address</string>
    <string name="CompanyCity">City</string>
    <string name="CompanyPostcode">Postcode</string>
    <string name="Phone">Phone</string>
    <string name="CompanyConPersEmail">Email</string>
    <string name="Company">Company</string>
    <string name="ContactPerson">Contact Person</string>
    <string name="NewCompany">Add a new company</string>
    <string name="startofempl">Start of employment</string>
    <string name="title_activity_wage_man_mod">WageManMod</string>
    <string name="title_activity_querys">Queries</string>
    <string name="TimeOfStart">Time of start</string>
    <string name="DateOfStart">Date of start</string>
    <string name="DateOfEnd">Date of end</string>
    <string name="TimeOfEnd">Time of end</string>
    <string name="CompanyComPersPhone">Phone</string>
    <string name="NumberOfWeek">Week of the year</string>
    <string name="Query">Query</string>
    <string name="salaryPerHour">Hourly wage</string>
    <string name="unpaidBreak">Unpaid break minutes</string>
    <string name="Comment">Comments...</string>
    <string name="btnTime">Time</string>
    <string name="Agencies">Agencies</string>
    <string name="AddNewAgency">Add a new agency</string>
    <string name="Agency">Agency</string>
    <string name="DefShifts">Default Shifts</string>
    <string name="title_activity_def_shifts_man">Defaults of shifts</string>
    <string name="ShiftName">Shift name</string>
    <string name="save">Save</string>
    <string name="bt_stp_somp_send">Save</string>
    <string name="title_activity_def_shifts_man_mod">Modify defaults of Shifts</string>
    <string name="title_activity_agencies_man">Datas of Agencies</string>
    <string name="title_activity_agencies_man_mod">Modify datas of agencies</string>
    <string name="NotSelected">Not selected</string>
    <string name="ChooseDefaultShift">Choose a default shift</string>
    <string name="chooseCompany">Choose a company</string>
    <string name="Overtime">Overtime</string>
    <string name="wageOfTheOtime">Wage of the overtime</string>
    <string name="dialogRecordExistQuestion">Are you sure you want to add this entry?</string>
    <string name="dialogRecordExistWarning">This day already contains record.</string>
    <string name="mustFillDateTime">The date and time values must fill!</string>
    <string name="setUpWorkingTime">SET UP YOUR WORKING TIME</string>
    <string name="myCompanies">My Companies</string>
    <string name="DataOfTheCompany">Data of the company</string>
    <string name="myAgencies">My Agencies</string>
    <string name="DataOfTheAgencies">Data of the Agencies</string>
    <string name="SetUpYourWages">Set up your wages</string>
    <string name="ModifyYourWage">Modify your wage</string>
    <string name="SetANewDefaultShift">Set a new default shift</string>
    <string name="SelectCompany">Select Company</string>
    <string name="SelectAgency">Select Agency</string>
    <string name="ModifyYourShift">Modify your shift</string>
    <string name="ModifyYourAgency">Modify your agency</string>
    <string name="ModifyYourCompany">Modify your company</string>
    <string name="chooseAgency">Choose an agency</string>
    <string name="savePayslip">Save payslip</string>
    <string name="saveYourPayslip">Save your payslip</string>
    <string name="saveFromPhoto">Make a photo from your payslip</string>
    <string name="saveFromFile">Choose your payslip file</string>
    <string name="payslipName">Payslip name</string>
    <string name="firstTimeRun">First Time Run</string>
    <string name="loadDefaults">load defaults</string>
    <string name="StartToWork">Start to work</string>
    <string name="devSection">Developer section</string>
    <string name="Currency">Currency</string>
    <string name="beforeValue">Before value</string>
    <string name="viewableFields">viewable fields</string>
    <string name="Companies">Companies</string>
    <string name="title_activity_my">My activity</string>
    <string name="title_activity_viewable_fields">Viewable fields</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="textview">textview</string>
    <string name="dayName">Name of days</string>
    <string name="shift">Shift</string>
    <string name="payedHours">Numbers of paid hours</string>
    <string name="noViewvableFields">The viewable fields aren\'t selected. \nPlease select some fields on QUERYS -> Viewable fields.</string>
    <string name="hours">Hours</string>
    <string name="deketeDays">Delete days</string>
    <string name="title_activity_delete_wrong_days">Delete days</string>
    <string name="selectDeletedDay">Select the day you want to delete</string>
    <string name="Delete">Delete</string>
    <string name="title_activity_view_logo">viewLogo</string>
    <string name="holiday">Holiday</string>
    <string name="wageOfTheHoliday">Wage of the holiday (wage of day)</string>
    <string name="nullHour" translatable="false">00:00</string>
    <string name="midnight" translatable="false">24:00</string>
    <string name="numOfViewableDays">Viewable days</string>
    <string name="viewableWeeks">Viewable weeks</string>
    <string name="numberOfWeek">Number of the week</string>
    <string name="contactSupport">Contact Support</string>
    <string name="reportBugs">Report bugs</string>
    <string name="noDataMatching">No data matching your search</string>
    <string name="startOfTheWeek">Start of the week</string>
    <string name="monday">Monday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="tuesday">Tuesday</string>
    <string name="firstWelcome" translatable="false">Welcome to WorkTime</string>
    <string name="firstSecLine">Please start to setup your details</string>
    <string name="week">week</string>
    <string name="year">year</string>
    <string name="wage">Wage</string>
    <string name="paidHours">Paid hours</string>
    <string name="persons">Persons</string>
    <string name="title_activity_persons_man">PersonsMan</string>
    <string name="dataOfThePersons">Data of the persons</string>
    <string name="addNewPerson">Add a new person</string>
    <string name="lastName">Lastname</string>
    <string name="foreName">Forename</string>
    <string name="title_activity_persons_man_mod">PersonsManMod</string>
    <string name="modifyPerson">Modify persons\'s datas</string>

</resources>
