<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/querys"
        android:title="@string/Query"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/navigation_dashboard"
        android:enabled="true"
        android:icon="@drawable/overview"
        android:title="@string/title_home"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_notifications"
        android:enabled="true"
        android:icon="@drawable/setup"
        android:title="@string/title_notifications"
        app:showAsAction="always|withText" />
</menu>