<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.computerxpert.worktime.Activities.FirstRunLoadDefaults">

    <android.support.v7.widget.Toolbar
        android:id="@+id/ftrld_top"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/toolbar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- app:theme="@style/" > -->

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="6dp"
                android:text="@string/firstWelcome"
                android:textAllCaps="true"
                android:textColor="@color/toolbar_title"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="8dp"
                android:text="@string/firstSecLine"
                android:textAllCaps="true"
                android:textColor="@color/toolbar_title"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_title" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/btn_wages2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorWhite"
        android:fontFamily="sans-serif"
        android:paddingEnd="0dp"
        android:paddingStart="26dp"
        android:text="@string/btn_setup_wages"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_companies2" />

    <Button
        android:id="@+id/btn_companies2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:fontFamily="sans-serif"
        android:paddingEnd="0dp"
        android:paddingStart="26dp"
        android:text="@string/btn_setup_company"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ftrld_top" />

    <Button
        android:id="@+id/btn_agencies2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorWhite"
        android:fontFamily="sans-serif"
        android:paddingEnd="0dp"
        android:paddingStart="26dp"
        android:text="@string/Agencies"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_wages2" />

    <Button
        android:id="@+id/btn_defShifts2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorWhite"
        android:fontFamily="sans-serif"
        android:paddingEnd="0dp"
        android:paddingStart="26dp"
        android:text="@string/DefShifts"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_agencies2" />

    <Button
        android:id="@+id/btn_startToWork"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorWhite"
        android:fontFamily="sans-serif"
        android:paddingEnd="0dp"
        android:paddingStart="26dp"
        android:text="@string/StartToWork"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_defShifts2" />

</android.support.constraint.ConstraintLayout>
