<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.computerxpert.worktime.Activities.SavePayslips">



    <android.support.v7.widget.Toolbar
        android:id="@+id/savePayslip_top"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="@color/toolbar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- app:theme="@style/" > -->


        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="6dp"
                android:text="@string/title_dashboard"
                android:textColor="@color/toolbar_title"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="8dp"
                android:text="@string/saveYourPayslip"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_title" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>


    <EditText
        android:id="@+id/ed_payslipName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/payslipName"
        android:inputType="textPersonName"
        android:paddingEnd="0dp"
        android:paddingStart="26dp"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savePayslip_top" />

    <Button
        android:id="@+id/btn_savePhoto"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorWhite"
        android:fontFamily="sans-serif"
        android:paddingEnd="0dp"
        android:paddingStart="26dp"
        android:text="@string/saveFromPhoto"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_payslipName" />

    <Button
        android:id="@+id/btn_saveFile"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorWhite"
        android:fontFamily="sans-serif"
        android:paddingEnd="0dp"
        android:paddingStart="26dp"
        android:text="@string/saveFromFile"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_savePhoto" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_saveFile" android:contentDescription="@string/todo" />


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>
