<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.computerxpert.worktime.Activities.ViewableFields">

    <android.support.v7.widget.Toolbar
        android:id="@+id/ViewableFields_top"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/toolbar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- app:theme="@style/" > -->

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_activity_viewable_fields"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/toolbar_title"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ViewableFields_top">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/sw_dayName"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@color/colorWhite"
                android:fontFamily="sans-serif"
                android:paddingEnd="0dp"
                android:paddingStart="26sp"
                android:text="@string/dayName"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/sw_shift"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorWhite"
                android:fontFamily="sans-serif"
                android:paddingEnd="0dp"
                android:paddingStart="26sp"
                android:text="@string/shift"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_dayName" />

            <Switch
                android:id="@+id/sw_week"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorWhite"
                android:fontFamily="sans-serif"
                android:paddingEnd="0dp"
                android:paddingStart="26sp"
                android:text="@string/numberOfWeek"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_shift" />

            <Switch
                android:id="@+id/sw_paidHours"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorWhite"
                android:fontFamily="sans-serif"
                android:paddingEnd="0dp"
                android:paddingStart="26sp"
                android:text="@string/payedHours"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_week" />

            <Switch
                android:id="@+id/sw_wage"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorWhite"
                android:fontFamily="sans-serif"
                android:paddingEnd="0dp"
                android:paddingStart="26sp"
                android:text="@string/btn_setup_wages"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_paidHours" />

            <Switch
                android:id="@+id/sw_unpBreak"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorWhite"
                android:fontFamily="sans-serif"
                android:paddingEnd="0dp"
                android:paddingStart="26sp"
                android:text="@string/unpaidBreak"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_wage" />

            <Switch
                android:id="@+id/sw_comments"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorWhite"
                android:fontFamily="sans-serif"
                android:paddingEnd="0dp"
                android:paddingStart="26sp"
                android:text="@string/Comment"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_unpBreak" />

            <Switch
                android:id="@+id/sw_companies"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorWhite"
                android:fontFamily="sans-serif"
                android:paddingEnd="0dp"
                android:paddingStart="26sp"
                android:text="@string/Companies"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_comments" />

            <Switch
                android:id="@+id/sw_agencies"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorWhite"
                android:fontFamily="sans-serif"
                android:paddingEnd="0dp"
                android:paddingStart="26sp"
                android:text="@string/Agencies"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_companies" />

            <Button
                android:id="@+id/btn_saveVblFields"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape"
                android:fontFamily="sans-serif"
                android:text="@string/save"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_agencies" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>
